--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ django = "^3.0.5"
 djangorestframework = "^3.11.0"
 
 [tool.poetry.dev-dependencies]
+mypy = "^0.770"
+flake8 = "^3.7.9"
 
 [build-system]
 requires = ["poetry>=0.12"]
